--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "nodemon": "^1.18.4",
     "polytool": "0.0.6",
-    "bcrypt":"*"
+    "bcrypt":"*",
+    "express":"*",
+    "body-parser":"*"
   }
 }
